# libFEM

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/geometry/: CMakeLists.txt
src/geometry/headers/: Edge.h  Element.h  Face.h  Hexahedron.h  Point.h
src/geometry/sources/: Edge.cpp  Element.cpp  Face.cpp  Hexahedron.cpp  Point.cpp
src/polynomials/: CMakeLists.txt
src/polynomials/headers/: Chebyshev.h  Lagrange.h  Polynomial.h
src/polynomials/sources/: Chebyshev.cpp  Lagrange.cpp  Polynomial.cpp
src/quadratures/: CMakeLists.txt
src/quadratures/headers/: Quadrature.h
src/quadratures/sources/: Quadrature.cpp
tests/: CMakeLists.txt
tests/unitt_geometry/: CMakeLists.txt
tests/unitt_geometry/sources/: main.cpp
tests/unitt_polynomials/: CMakeLists.txt
tests/unitt_polynomials/sources/: main.cpp
